<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_search"
          android:title="@string/search_title"
          android:actionLayout="@layout/search_interface"
          android:icon="@drawable/ic_search_white_36dp"
          app:showAsAction="ifRoom|collapseActionView"
          app:actionViewClass="android.support.v7.widget.SearchView" />
    <item android:id="@+id/action_recent"
          android:title="@string/history"
          android:icon="@drawable/ic_history_white_36dp"
          app:showAsAction="ifRoom|collapseActionView" />
</menu>